--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,17 +29,18 @@
         app:layout_constraintTop_toBottomOf="@+id/text_view"
         app:layout_constraintVertical_bias="1.0" />
 
-    <Button
-        android:id="@+id/button_monday"
-        android:layout_width="wrap_content"
+    <EditText
+        android:id="@+id/text_input"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/button_monday_title"
+        android:ems="10"
+        android:hint="@string/text_input_hint"
+        android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_view"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintEnd_toStartOf="@+id/button_sunday"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
